[project]
name = "crawler-onion"
version = "6.4.0"
description = "Crawler Tor modulaire pour l'exploration et l'analyse de sites .onion"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ahottois"}
]
keywords = ["tor", "crawler", "onion", "darknet", "osint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "PySocks>=1.7.1",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
color = ["colorama>=0.4.6"]

[project.urls]
Homepage = "https://github.com/ahottois/crawler-onion"
Repository = "https://github.com/ahottois/crawler-onion.git"
Issues = "https://github.com/ahottois/crawler-onion/issues"

[project.scripts]
crawler-onion = "crawler_package.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["crawler_package*"]
